// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionImage /> should match the snapshot with file 1`] = `
.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  margin-top: 10px;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-right: 21px;
  padding-left: 21px;
  border-radius: 5px;
  border-radius: 5px;
}

.c2:hover {
  background-color: #E9F1FB;
}

.c6 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  visibility: hidden;
  margin-left: 15px;
  cursor: pointer;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-top: 20px;
  background-color: rgba(233,241,251,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c5 {
  width: auto;
  height: auto;
  max-width: 100%;
  max-height: 50vh;
}

.c7 {
  width: auto;
  height: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 > img {
  max-width: 100%;
}

.c10 {
  resize: none;
  padding: 12px;
  border: 1px solid #E9F1FB;
  border-radius: 5px;
  margin-right: 9px;
  width: 100%;
  height: auto;
  background-color: transparent;
  border: 1px solid transparent;
}

.c10:focus {
  box-shadow: none;
  outline: none;
  border: 1px solid #107969;
}

.c10:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="HoverableBox-zvip6a-0 c2"
        width="100%"
      >
        <div
          class="c3"
          width="100%"
        >
          <div
            class="c4"
          >
            <img
              alt="Uploaded image"
              class="c5"
              src="mokc_url.png"
            />
          </div>
          <div
            class="c6"
            visibility="hidden"
          >
            <img
              alt="bin-icon"
              class="c7"
              src="IMAGE_MOCK"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
        width="100%"
      >
        <div
          class="c0"
        >
          <textarea
            class="c10"
            height="auto"
            placeholder="Input here the text describing the image for people with disabilities"
            rows="4"
            width="100%"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<QuestionImage /> should match the snapshot without file 1`] = `
.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-top: 20px;
  background-color: rgba(233,241,251,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border-radius: 5px;
  border: 1px dashed #2F3850;
  background-color: rgba(233,241,251,1);
  padding: 50px;
  width: 100%;
}

.c5 {
  margin: 0;
  font-family: DM Sans;
  font-size: 15px;
  line-height: 150%;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: rgba(183,39,234,1);
  cursor: pointer;
  color: rgba(183,39,234,1);
}

.c6 {
  margin: 0;
  font-family: DM Sans;
  font-size: 15px;
  line-height: 150%;
  color: #2F3850;
}

.c3 {
  width: auto;
  height: auto;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  margin-top: 22px;
  margin-bottom: 12px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c8 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c11 {
  resize: none;
  padding: 12px;
  border: 1px solid #E9F1FB;
  border-radius: 5px;
  margin-right: 9px;
  width: 100%;
  height: auto;
  background-color: transparent;
  border: 1px solid transparent;
}

.c11:focus {
  box-shadow: none;
  outline: none;
  border: 1px solid #107969;
}

.c11:disabled {
  color: #ABBBD1;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      style="position: relative; pointer-events: all;"
      width="100%"
    >
      <div
        class="c2"
        display="flex"
      >
        <input
          accept="image/jpg, image/png, image/gif, image/jpeg"
          autocomplete="off"
          style="display: none;"
          tabindex="-1"
          type="file"
        />
        <img
          alt="image"
          class="c3"
          src="IMAGE_MOCK"
        />
        <div
          class="c4"
        >
          <h3
            class="c5"
            color="#B727EA"
            cursor="pointer"
            text-decoration="underline"
          >
            Upload
          </h3>
          <h3
            class="c6"
          >
             or drop an image right here
          </h3>
        </div>
        <div
          class="c7"
        >
          <p
            class="c8"
          >
            It works for JPG, PNG, GIF formats, max size 5MB
          </p>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10"
        width="100%"
      >
        <div
          class="c0"
        >
          <textarea
            class="c11"
            height="auto"
            placeholder="Input here the text describing the image for people with disabilities"
            rows="4"
            width="100%"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
